3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/spell_effect.c: small patch by Karla Stenger to put player's name
   in the 'race' field of marking runes. This way, a DM can know who wrote
   a rune, in case it has some bad vocabulary :)
Ryo 2004-03-06

server/spell_attack.c: change check_cone_push function to use arch weights.
move function up for resuability and change to check_spell_knockback
include/sproto.h: change function name
TM 2004-02-28


common/image.c: removed unused variables.
common/item.c: conditionally remove unused variables.
common/map.c: conditionally define variables, unused under Windows.
include/global.h: turned off a conversion warning under Windows.
Ryo 2004-02-28


common/living.c: changed 'signed char' to 'sint8' for set|get|change_attr_value.
common/map.c: map size is sint16, for arch_blocked.
include/libproto.h: update prototypes for set|get|change_attr_value and arch_blocked.
random_maps/rproto.h: changed prototype for surround_flag3.
random_maps/wall.c: changed surround_flag3 to use sint16 instead of int for map
   coordinates.
server/apply.c: attribute values are sint8 in eat_special_food and
   apply_changes_to_player. Some explicit casts.
server/player.c: map coordinates are sint16, in hideability.
server/spell_attack.c: map coordinates are sint16, not int.
server/spell_effect.c: stats are sint8 in cast_change_ability. Map coordinates are
   sint16 in move_aura.
server/time.c: generate_monster doesn't return a value.
Ryo 2004-02-27


common/living.c: Have give_skill_by_name() update the skill pointers in the
   player object.
server/spell_attack.c: Properly set maxhp in the cone spell - this is used