@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/item.c: Fixed calc_item_power() to return valid item power for
+   items with high enchantments.
+Andreas Kirschbaum 2004-03-07
+
 server/spell_effect.c: small patch by Karla Stenger to put player's name
    in the 'race' field of marking runes. This way, a DM can know who wrote
    a rune, in case it has some bad vocabulary :)
